@@ -1786,7 +1786,7 @@ class animal(JSONEndpoint):
             "entryreasons": asm3.lookups.get_entryreasons(dbo),
             "entrytypes": asm3.lookups.get_entry_types(dbo),
             "events": asm3.event.get_events_by_animal(dbo, a.ID),
-            "flags": asm3.lookups.get_animal_flags(dbo),
+            "flags": asm3.lookups.get_animal_flags(dbo, a.ADDITIONALFLAGS),
             "incidents": asm3.animalcontrol.get_animalcontrol_for_animal(dbo, a.ID),
             "internallocations": asm3.lookups.get_internal_locations(dbo, o.locationfilter, o.siteid),
             "jurisdictions": asm3.lookups.get_jurisdictions(dbo),
@@ -5879,7 +5879,7 @@ class person(JSONEndpoint):
             "species": asm3.lookups.get_species(dbo),
             "breeds": asm3.lookups.get_breeds_by_species(dbo),
             "colours": asm3.lookups.get_basecolours(dbo),
-            "flags": asm3.lookups.get_person_flags(dbo),
+            "flags": asm3.lookups.get_person_flags(dbo, p.ADDITIONALFLAGS),
             "ynun": asm3.lookups.get_ynun(dbo),
             "ynunk": asm3.lookups.get_ynunk(dbo),
             "homecheckhistory": asm3.person.get_homechecked(dbo, p.id),
